Fix type arguments